package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "matching_engine_lib",
    srcs = glob(
        ["src/*.cpp"],
        exclude = ["main.cpp"]
    ),
    hdrs = glob(
        ["include/*.hpp"]
    ),
    includes = ["include"]
)

cc_binary(
    name = "matching_engine",
    srcs = ["src/main.cpp"],
    deps = [":matching_engine_lib"]
)
